--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,7 +1,7 @@
-.container {
-  max-width: 1170px;
+/* .container {
+  min-width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
-}
+} */
