--- a/src/css/styles.module.css
+++ b/src/css/styles.module.css
@@ -196,8 +196,9 @@ ul {
 
 .card_box_item {
   margin: 10px;
-  width: 300px;
-  height: 400px;
+  padding: 20px;
+  width: 185px;
+  height: 260px;
   text-align: center;
   border-radius: 3px;
   -webkit-transition: 200ms ease-in-out;
@@ -208,9 +209,9 @@ ul {
 }
 
 .card_box_item img {
-  width: 185px;
-  height: 260px;
-  margin: 15px auto;
+  width: 160px;
+  height: 220px;
+  margin: auto;
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
@@ -226,22 +227,23 @@ ul {
   color: black;
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
-  text-align: left;
+  text-align: center;
   font-size: 15px;
-  margin: 15px 0 0 0;
-  padding: 0 0 0 30px;
+  margin: 0;
+  padding: 0;
   letter-spacing: 1px;
 }
 
 .card_box_item p {
   color: black;
   font-family: 'Roboto', sans-serif;
-  text-align: left;
-  font-size: 12px;
-  padding: 0 40px 0 40px;
+  text-align: center;
+  font-size: 10px;
+  padding: 0;
   letter-spacing: 1px;
-  margin: 5px 0 10px 0;
+  margin: 0;
   line-height: 20px;
+  white-space: nowrap;
 }
 
 .link {
@@ -322,22 +324,30 @@ ul {
 }
 
 .search_form_button {
-  display: inline-block;
-  width: 48px;
-  height: 48px;
-  border: 0;
-  background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
-  background-size: 40%;
+  color: black;
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
+  border: 2px solid black;
+  padding: 10px 10px 10px 40px;
+  font-size: 15px;
+  background: url(https://cdn.onlinewebfonts.com/svg/img_173948.png);
+  background-size: 12px 12px;
   background-repeat: no-repeat;
-  background-position: center;
-  opacity: 0.6;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  cursor: pointer;
-  outline: none;
+  background-position: 7% 50%;
+  border-radius: 5px;
+  -webkit-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
 }
 
-.search_form-button:hover {
-  opacity: 1;
+.search_form_button:hover {
+  color: white;
+  background-color: black;
+  background-size: 12px 12px;
+  background-repeat: no-repeat;
+  background-position: 10% 50%;
+  cursor: pointer;
 }
 
 .search_form_input {
@@ -347,5 +357,5 @@ ul {
   font-size: 20px;
   border: 1 solid rgb(15, 8, 8);
   outline: none;
-  padding: 10px;
+  padding: 7px;
 }
