--- a/src/css/styles.module.css
+++ b/src/css/styles.module.css
@@ -94,7 +94,7 @@ ul {
 .card_right {
   width: 60%;
   float: left;
-  background: white;
+  /* background: white; */
   height: 80%;
   margin-bottom: 30px;
 }
@@ -302,7 +302,7 @@ ul {
   z-index: 1100;
   width: 100%;
   display: flex;
-  justify-content: left;
+  justify-content: space-between;
   align-items: left;
   min-height: 64px;
   padding-right: 24px;
