--- a/src/css/styles.module.css
+++ b/src/css/styles.module.css
@@ -1,6 +1,17 @@
+html {
+  box-sizing: border-box;
+  width: 100vw;
+  overflow-x: hidden;
+}
+
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: white;
+  min-width: 100%;
 }
 
 ul {
@@ -100,7 +111,7 @@ ul {
 }
 
 .card_right h2 {
-  color: black;
+  /* color: black; */
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
   text-align: left;
@@ -111,7 +122,7 @@ ul {
 }
 
 .card_right h3 {
-  color: black;
+  /* color: black; */
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
   text-align: left;
@@ -122,7 +133,7 @@ ul {
 }
 
 .card_right p {
-  color: black;
+  /* color: black; */
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
   padding: 0 40px 0 40px;
@@ -132,7 +143,7 @@ ul {
 }
 
 .card_right span {
-  color: black;
+  /* color: black; */
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
   padding: 0 40px 0 40px;
@@ -159,7 +170,7 @@ ul {
 /* Navigation and Cast and Reviews pages */
 
 .card_right_description {
-  color: black;
+  /* color: black; */
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
   padding: 0 40px 0 40px;
@@ -178,7 +189,7 @@ ul {
 }
 
 .card_right_description h3 {
-  color: black;
+  /* color: black; */
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
   text-align: left;
@@ -189,7 +200,7 @@ ul {
 }
 
 .card_right_description p {
-  color: black;
+  /* color: black; */
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
   padding: 0 40px 0 40px;
@@ -228,7 +239,7 @@ ul {
 }
 
 .card_box_item h3 {
-  color: black;
+  /* color: black; */
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
   text-align: center;
@@ -239,7 +250,7 @@ ul {
 }
 
 .card_box_item p {
-  color: black;
+  /* color: black; */
   font-family: 'Roboto', sans-serif;
   text-align: center;
   font-size: 10px;
@@ -255,27 +266,26 @@ ul {
   text-decoration: none;
   padding: 12px;
   font-weight: 700;
-  color: #2a363b;
+  color: rgb(255, 255, 255);
   font-size: 18px;
 }
 
 .activeLink {
-  composes: link;
+  /* composes: link; */
   color: red;
 }
 
 /* Button Go back */
 
 .button_back {
-  color: black;
+  color: white;
+  background-color: black;
   text-decoration: none;
   font-family: 'Roboto', sans-serif;
   border: 2px solid black;
   padding: 10px 10px 10px 40px;
   font-size: 15px;
-  background: url(https://cdn.onlinewebfonts.com/svg/img_173948.png);
   background-size: 12px 12px;
-  background-repeat: no-repeat;
   background-position: 7% 50%;
   border-radius: 5px;
   -webkit-transition-property: all;
@@ -285,8 +295,9 @@ ul {
 }
 
 .button_back:hover {
-  color: white;
-  background-color: black;
+  color: black;
+  background-color: white;
+  border: 2px solid white;
   background-size: 12px 12px;
   background-repeat: no-repeat;
   background-position: 10% 50%;
@@ -303,14 +314,15 @@ ul {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: left;
+  align-items: center;
+  text-align: center;
   min-height: 64px;
   padding-right: 24px;
   padding-left: 24px;
   padding-top: 12px;
   padding-bottom: 12px;
-  color: #fff;
-  background-color: white;
+
+  background-color: rgb(132, 153, 158);
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
     0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
@@ -323,21 +335,19 @@ ul {
   align-items: center;
   width: 100%;
   max-width: 600px;
-  background-color: #fff;
   border-radius: 3px;
   overflow: hidden;
 }
 
 .search_form_button {
-  color: black;
+  color: white;
+  background-color: black;
   text-decoration: none;
   font-family: 'Roboto', sans-serif;
   border: 2px solid black;
   padding: 10px 10px 10px 40px;
   font-size: 15px;
-  background: url(https://cdn.onlinewebfonts.com/svg/img_173948.png);
   background-size: 12px 12px;
-  background-repeat: no-repeat;
   background-position: 7% 50%;
   border-radius: 5px;
   -webkit-transition-property: all;
@@ -347,8 +357,9 @@ ul {
 }
 
 .search_form_button:hover {
-  color: white;
-  background-color: black;
+  color: black;
+  background-color: white;
+  border: 2px solid white;
   background-size: 12px 12px;
   background-repeat: no-repeat;
   background-position: 10% 50%;
@@ -360,9 +371,14 @@ ul {
   width: 100%;
   font: inherit;
   font-size: 20px;
-  border: 1 solid rgb(15, 8, 8);
+  /* border: 1 solid rgb(233, 227, 227); */
   outline: none;
   padding: 7px;
+}
+
+.search_form-input::placeholder {
+  font: inherit;
+  font-size: 18px;
 }
 
 /* SCREEN MOBILE________________________________ */
