--- a/src/css/styles.module.css
+++ b/src/css/styles.module.css
@@ -19,67 +19,93 @@ ul {
 }
 
 .container {
-  flex-grow: 1;
+  padding-top: 40px;
+  padding-bottom: 56px;
   padding-left: 20px;
   padding-right: 20px;
-  margin: 0 auto;
+  /* width: 320px;
+  height: 100%; */
+  margin: auto;
 }
 
-/* Home and Movies pages */
+/* Home page styles */
+
 .cards_wrap {
   display: flex;
   flex-wrap: wrap;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
+}
+
+.card_thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.card_overlay {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transform: translateY(100%);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  cursor: pointer;
+}
+
+.card-thumb:hover .flex-overlay {
+  transform: translateY(0);
 }
 
 .card_box {
-  margin: 10px;
+  margin-right: 30px;
+  margin-top: 0;
+  margin-bottom: 30px;
+
+  display: block;
   width: 300px;
-  height: 490px;
-  text-align: center;
-  border-radius: 3px;
-  -webkit-transition: 200ms ease-in-out;
-  -o-transition: 200ms ease-in-out;
-  transition: 200ms ease-in-out;
-  -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+}
+
+.card_box:nth-child(3n) {
+  margin-right: 0;
 }
 
 .card_box:hover {
-  margin-bottom: -10px;
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
 }
 
 .card_poster {
-  width: 290px;
-  height: 400px;
-  margin: 5px auto;
-  position: relative;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  display: block;
+  width: 300px;
+  height: 450px;
+  border: none;
 }
 
-.card_box h5 {
-  color: #fff;
-  padding: 10px;
-  margin: auto;
+.card_content {
+  margin-top: 0;
+  margin-bottom: 0px;
+  padding: 25px 25px;
+
+  background: rgba(235, 231, 234, 0.767);
+
   text-align: center;
-  font-weight: 10;
-  font-size: 20px;
-  background: rgba(0, 0, 0, 0.7);
-  -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.7);
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.8);
+  align-items: center;
+  justify-content: center;
+  border-top: hidden;
+  border: 1px solid transparent;
+}
+
+.card_content .card_title {
+  margin-top: 0;
+  margin-bottom: 4px;
+  color: #000;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
 }
 
 /* Movie Details Page */
@@ -266,7 +292,7 @@ ul {
   text-decoration: none;
   padding: 12px;
   font-weight: 700;
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   font-size: 18px;
 }
 
@@ -313,7 +339,7 @@ ul {
   z-index: 1100;
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   text-align: center;
   min-height: 64px;
@@ -322,7 +348,7 @@ ul {
   padding-top: 12px;
   padding-bottom: 12px;
 
-  background-color: rgb(132, 153, 158);
+  background-color: rgb(255, 255, 255);
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
     0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
@@ -413,6 +439,14 @@ ul {
 
 /* SCREEN TABLET */
 @media screen and (min-width: 760px) {
+  .cards_wrap {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: -10px;
+  }
   .Searchbar {
     min-width: 760px;
   }
