--- a/src/css/styles.module.css
+++ b/src/css/styles.module.css
@@ -96,7 +96,7 @@ ul {
 
 .card_right li {
   display: inline;
-  color: grey;
+  color: rgb(0, 0, 0);
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 14px;
@@ -238,58 +238,6 @@ ul {
   background-repeat: no-repeat;
   background-position: 10% 50%;
   cursor: pointer;
-}
-
-.search_form {
-  margin-top: 15px;
-  display: flex;
-  align-items: center;
-  width: 100%;
-  max-width: 600px;
-  border-radius: 3px;
-  overflow: hidden;
-}
-
-.search_form_button {
-  color: white;
-  background-color: black;
-  text-decoration: none;
-  font-family: 'Roboto', sans-serif;
-  border: 2px solid black;
-  padding: 10px 10px 10px 40px;
-  font-size: 15px;
-  background-size: 12px 12px;
-  background-position: 7% 50%;
-  border-radius: 5px;
-  -webkit-transition-property: all;
-  transition-property: all;
-  -webkit-transition-duration: 0.5s;
-  transition-duration: 0.5s;
-}
-
-.search_form_button:hover {
-  color: black;
-  background-color: white;
-  border: 2px solid white;
-  background-size: 12px 12px;
-  background-repeat: no-repeat;
-  background-position: 10% 50%;
-  cursor: pointer;
-}
-
-.search_form_input {
-  display: inline-block;
-  width: 100%;
-  font: inherit;
-  font-size: 20px;
-  /* border: 1 solid rgb(233, 227, 227); */
-  outline: none;
-  padding: 7px;
-}
-
-.search_form-input::placeholder {
-  font: inherit;
-  font-size: 18px;
 }
 
 /* SCREEN MOBILE________________________________ */
