--- a/src/pages/HomeView/homeView.module.css
+++ b/src/pages/HomeView/homeView.module.css
@@ -25,12 +25,12 @@ ul {
   .container {
     width: 320px;
 
-    padding-top: 40px;
-    padding-bottom: 56px;
     margin: auto;
   }
 
   .cards_wrap {
+    display: inline-flex;
+    flex-direction: column;
     align-items: center;
     text-align: center;
     justify-content: center;
@@ -82,7 +82,8 @@ ul {
   .card_content {
     margin-top: 0;
     margin-bottom: 0px;
-    padding: 20px 20px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 
     background: rgba(235, 231, 234, 0.767);
 
@@ -110,10 +111,10 @@ ul {
   .cards_wrap {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
     align-items: center;
     text-align: center;
     justify-content: center;
-    margin: -10px;
   }
 
   .container {
@@ -134,8 +135,6 @@ ul {
 @media screen and (min-width: 1024px) {
   .container {
     width: 1024px;
-    padding-left: 20px;
-    padding-right: 20px;
   }
 
   .card_box:nth-child(3n) {
@@ -144,5 +143,11 @@ ul {
 
   .card_box:nth-last-child(-n + 3) {
     margin-bottom: 0;
+  }
+
+  .text_content {
+    text-align: center;
+    align-items: center;
+    justify-content: center;
   }
 }
