--- a/src/components/CastItem/cast.module.css
+++ b/src/components/CastItem/cast.module.css
@@ -55,13 +55,13 @@ li {
   .card_content {
     margin-top: 0;
     margin-bottom: 0px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 
-    width: 100%;
+    width: 99%;
     height: auto;
 
-    background: rgba(235, 231, 234, 0.767);
+    background: rgba(235, 231, 234, 0.918);
 
     text-align: center;
     align-items: center;
@@ -74,17 +74,29 @@ li {
 @media screen and (min-width: 760px) {
   .container {
     width: 760px;
-    padding-top: 0;
-    padding-bottom: 0;
-    margin: auto;
   }
 
   .cards_wrap {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
     align-items: center;
     text-align: center;
     justify-content: center;
+  }
+
+  .card_box:nth-child(3n) {
+    margin-right: 0;
+  }
+
+  .card_box:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
+
+  .card_box {
+    margin-right: 30px;
+    margin-top: 30px;
+
+    display: block;
+    width: 30%;
   }
 }
