--- a/src/pages/MovieDetailsView/movie.module.css
+++ b/src/pages/MovieDetailsView/movie.module.css
@@ -46,7 +46,7 @@ ul {
   }
 
   .card_item h2 {
-    margin-top: 10px;
+    margin-top: 15px;
     margin-bottom: 0;
     font-size: 20px;
     font-weight: bold;
@@ -55,7 +55,7 @@ ul {
   }
 
   .card_item h3 {
-    margin-top: 10px;
+    margin-top: 15px;
     margin-bottom: 0;
     font-weight: bold;
 
@@ -64,9 +64,10 @@ ul {
 
   .card_item p {
     text-align: justify;
-    margin-top: 10px;
+    margin-top: 15px;
     margin-bottom: 0;
-    color: grey;
+
+    font-size: 16px;
   }
 
   .gender_list {
@@ -74,8 +75,9 @@ ul {
     align-items: center;
     justify-content: space-around;
     text-align: center;
-    margin-top: 10px;
-    color: grey;
+    margin-top: 15px;
+
+    font-size: 14px;
   }
 }
 
@@ -88,14 +90,15 @@ ul {
     align-items: center;
     text-align: center;
     justify-content: center;
-    padding-top: 0;
-    padding-bottom: 0;
-    margin: auto;
-    padding: 0;
+  }
+
+  .card_img {
+    width: 50%;
+    height: 50%;
   }
 
   .card_item {
-    text-align: left;
+    text-align: center;
     justify-content: center;
     align-items: center;
 
@@ -118,26 +121,15 @@ ul {
 /* SCREEN DESCTOP */
 @media screen and (min-width: 1024px) {
   .container {
-    position: relative;
     width: 1024px;
-
-    display: block;
-    align-items: center;
-    text-align: left;
-    justify-content: center;
-    padding-top: 0;
-    padding-bottom: 0;
-    margin: auto;
-    padding: 0;
   }
 
   .card_item {
-    text-align: left;
-    justify-content: center;
-    align-items: center;
-
-    font-size: 16px;
+    font-size: 18px;
     font-weight: normal;
+  }
+  .card_item h3 {
+    font-size: 18px;
   }
 }
 
